{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Player",
            "id": "4c570858-4516-49ed-aa3e-e4fb3d108242",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "85cdd82d-ff2c-4c51-8f4c-a8c500d5cd99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mode Change",
                    "type": "Button",
                    "id": "9aca9bbb-928d-422a-8dda-9539a81f425e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "859038d8-95e7-4962-9ba5-9479a4a7d637",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mode Change",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "872f0981-675e-428f-914f-c34034200985",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "46e31769-e480-4322-b3d5-068a30fca813",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "800617c7-03b7-43fd-b81e-3831278b27ad",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "97d0396e-227e-4325-b18a-4ddf96995d57",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f606069e-3e62-4fbc-843e-b0166a74a015",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CameraMove",
            "id": "83b8b14d-d9b8-438b-85af-3f1f5b0578b0",
            "actions": [
                {
                    "name": "Left",
                    "type": "Value",
                    "id": "f5729265-ce5e-4c45-aa88-fff53097966c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "fb400bf2-892d-4c0d-9930-57cbe2d46a7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "cb7d2541-0f23-40db-9c15-f684c8675474",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "86c953d2-1a79-4184-a3b0-82f5761434ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b91d8a1-4810-4257-b8d6-b6d3abb8f772",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdaeba7f-a96e-4b47-aea0-d7106e68c341",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4cfea738-c7f4-4375-9c3b-25da0f9e3618",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e02fb39-21ff-47f1-99df-a6840c8adbed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainState",
            "id": "733b5075-56db-4893-a5d9-395fad9f79bf",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "5c33b102-0c93-4ac5-80be-4a8955f2aa69",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BuildTab",
                    "type": "Button",
                    "id": "89c83e1e-1530-4bca-8437-e45522556fcc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TechTab",
                    "type": "Button",
                    "id": "5481a146-6416-43e9-b8e0-e8c5a4f00804",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "d220d77e-edf9-4128-ac47-937ad68165ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlayerStatus",
                    "type": "Button",
                    "id": "40452cec-11d8-4603-ab5a-506d1c392fe3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BarrackUnit",
                    "type": "Button",
                    "id": "a415637b-1417-4c01-be3e-da56a4eb6dc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AirDropUnit",
                    "type": "Button",
                    "id": "cbf4fb24-d687-4749-a9be-cb9f1b541178",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ExchangeTab",
                    "type": "Button",
                    "id": "4d50b645-aee6-4621-8e0f-7841c24cdc79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "89137994-1982-4cea-858e-6d46b31e6df0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8eecd045-35cd-44a1-9178-3f01887271e0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "879a07a6-af70-43b6-890c-a6115be408b6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9bb2d145-638c-42f9-ac14-955bcc3893e7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab6d470c-62bc-4d89-9e4a-26680f8c31ec",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7b20ea66-8860-433e-94a8-bf1008e0db80",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuildTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4c12b20-1ac5-4fac-bda4-480b0804c517",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TechTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6246dcf3-ca9b-45e2-8740-372109bac75d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f3330a0-7ac6-4d9a-b018-8da140fd1576",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerStatus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da8df388-e962-4c9e-a1b7-29d2ed6ec76e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BarrackUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9384cd1d-7e9b-4b27-8d00-284fdc4b49c2",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AirDropUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4c61799-4dde-48fc-8108-e36a8cc7637b",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExchangeTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BuildState",
            "id": "b3ba6261-212c-4bad-b184-201a211cef2e",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "86499303-bbc1-4f1f-b320-b5839949a401",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pick",
                    "type": "Button",
                    "id": "197b7b49-eee8-4792-93eb-d65908b4d69d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Locate",
                    "type": "Button",
                    "id": "6f163396-f4e5-43d6-a188-e0a6e0426342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "841a28b8-0ca2-4525-88c1-558ca38cbef1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Build",
                    "type": "Button",
                    "id": "3173f19a-267b-43b2-9878-90d36a6c67ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32136e1f-7626-40f2-adc3-a5a9dff8fd16",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5a5f926-4f58-4b20-884a-95b20218eec0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "641195ee-4337-43c5-8368-ab2ba7f720a0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Locate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3e59a59-bb59-4ef5-b9f9-36090b358404",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccd5c71b-d89b-49b4-816a-f75c75283d70",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TechState",
            "id": "9d0ea950-d54e-461f-b396-4877659c8c40",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "71b7e542-d774-4644-8bbe-90242038688b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a0a57b37-7459-4e45-a94b-967de2fbcf1d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseState",
            "id": "884f76ec-a271-43c5-ba33-a7e00b3b7328",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "f6b0d800-5205-4b57-a1aa-390370d56951",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8d57cc1e-6f87-4d66-9f52-bb3b1c72bff1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UnitState",
            "id": "68540934-79e2-4682-b297-b08ed594f82b",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "531c901a-3593-473a-ad88-8a638d2f35f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d2cd662-4a24-4ced-ba0d-a5a8de29789f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillState",
            "id": "000906c1-e4d5-4550-aa63-a47ffcfa5412",
            "actions": [
                {
                    "name": "GetSkillPos",
                    "type": "Button",
                    "id": "05afc679-4429-496a-88ec-06b2c070f3c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2173af03-fc16-40dd-a773-cd7f72df3ae4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GetSkillPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}